--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -73,16 +73,16 @@
                     <li class="dropdown" ng-cloak>
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             <div class="fa fa-fw"><b>P</b></div>
-                            <span ng-if="requests.QnARequests.length + requests.hfRequests.length > 0"
+                            <span ng-if="requests.QnARequests.length + requests.hfRequests.length + requests.projectRequests.length > 0"
                                   style="position: absolute; top: 0; right: 14px; font-size: 15px; text-shadow: 0 0 15px #00c6ff;"
                                     ng-class="{ 'visible-element': FirstInit }" class="hidden-element">
-                                [[ requests.QnARequests.length + requests.hfRequests.length ]]
+                                [[ requests.QnARequests.length + requests.hfRequests.length + requests.projectRequests.length ]]
                             </span>
                             <i class="fa fa-caret-down"></i>
                         </a>
 
                         <ul class="dropdown-menu dropdown-tasks noclose list-group">
-                            <li ng-if="requests.QnARequests.length + requests.hfRequests.length == 0" class="list-group-item">
+                            <li ng-if="requests.QnARequests.length + requests.hfRequests.length + requests.projectRequests.length == 0" class="list-group-item">
                                 <h5 class="text-info">You haven't any project requests</h5>
                             </li>
                             <li ng-repeat="requestQNA in requests.QnARequests | limitTo: 2" class="list-group-item">
@@ -133,6 +133,32 @@
                                         Decline
                                     </button>
                                     <button class="btn btn-default btn-info" ng-click="moreInfoHFMembershipRequest(requesthf.id, $index);">
+                                        More info
+                                    </button>
+                                </div>
+                            </li>
+                            <li ng-repeat="requestProject in requests.projectRequests | limitTo: 2" class="list-group-item">
+                                <h5 class="text-info">
+                                    User "[[ requestProject.contact.username ]]" has invite you into "[[ requestProject.hfForum.name ]]" project
+                                </h5>
+                                <div class="divider"></div>
+                                <p>
+                                    <b>Message:</b>
+                                    <span style="white-space: normal; text-overflow: ellipsis; overflow: hidden;">
+                                        [[ requestProject.message ]]
+                                    </span>
+                                </p>
+
+                                <div class="divider"></div>
+
+                                <div class="btn-group">
+                                    <button class="btn btn-default btn-success" ng-click="acceptProjectMembershipRequest(requestProject.id, $index);">
+                                        Accept
+                                    </button>
+                                    <button class="btn btn-default btn-danger" ng-click="declineProjectMembershipRequest(requestProject.id, $index);">
+                                        Decline
+                                    </button>
+                                    <button class="btn btn-default btn-info" ng-click="moreInfoProjectMembershipRequest(requestProject.id, $index);">
                                         More info
                                     </button>
                                 </div>
@@ -604,7 +630,8 @@
 			documentTemplate: "{{ asset('bundles/zectranet/templates/document.html') }}",
 			approveContactMembershipRequest: "{{ path('zectranet_approve_contact_membership_request', { 'request_id': 'request_id' }) }}",
             approveHFMembershipRequest: "{{ path('zectranet_approve_hf_membership_request', { 'request_id': 'request_id' }) }}",
-            approveQnAMembershipRequest: "{{ path('zectranet_approve_QNA_membership_request', { 'request_id': 'request_id' }) }}"
+            approveQnAMembershipRequest: "{{ path('zectranet_approve_QNA_membership_request', { 'request_id': 'request_id' }) }}",
+            approveProjectMembershipRequest: "{{ path('zectranet_approve_project_membership_request', { 'request_id': 'request_id' }) }}",
 		};
 
         var TEMPPARAMS = {};
