--- a/src/ZectranetBundle/Resources/views/headerForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForum.html.twig
@@ -179,7 +179,7 @@
             <div class="col-xs-12">
                 <div class="row forum-all ">
                     <div class="forum-main-header col-xs-12" ng-if="addnewheader == false">
-                        <h5><a href="#" ng-click="headerTrue();"> <i class="fa fa-plus"></i> Add new Header Сука </a></h5>
+                        <h5><a href="#" ng-click="headerTrue();"> <i class="fa fa-plus"></i> Add new Header </a></h5>
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                     {#<div class="row forum-all ">#}
 
                         {#<div class="forum-main-header col-xs-12">#}
-                            {#<h5>Add new Header Сука</h5>#}
+                            {#<h5>Add new Header</h5>#}
                         {#</div>#}
 
 
